--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
+twitter_username:  https://x.com/MonsarrateR?t=v1-u4KgG1C1lmDL4H-lBBQ&s=08 
+github_username: https://github.com/Maryotieno
 minimal_mistakes_skin: default
 search: true
 
