--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-twitter_username:  https://x.com/MonsarrateR?t=v1-u4KgG1C1lmDL4H-lBBQ&s=08 
-github_username: https://github.com/Maryotieno
-minimal_mistakes_skin: default
+twitter_username: MonsarrateR
+github_username: Maryotieno
+minimal_mistakes_skin: neon
 search: true
 
 # Build settings
@@ -58,7 +58,7 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
+  name   : "Mary Otieno"
   avatar : "/assets/images/bio-photo.jpg"
   bio    : "My awesome biography constrained to a sentence or two goes here."
   links:
