--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ plugins:
 author:
   name   : "Mary Otieno"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "AWS Cloud Practitioner|Cybersecurity Enthusiast|Cloud & Network Security Analyst"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
