--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ plugins:
 
 author:
   name   : "Mary Otieno"
-  avatar : "/assets/images/bio-photo.jpg"
+  avatar : "C:\Users\LENOVO\Pictures\Saved Pictures\Mary Otieno.jpg"
   bio    : "AWS Cloud Practitioner|Cybersecurity Enthusiast|Cloud & Network Security Analyst"
   links:
     - label: "Website"
@@ -83,9 +83,9 @@ footer:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/"
 
 defaults:
   # _posts
