--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
-  - title: "Posts"
-    url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
+  - title: "Projects"
+    url: /projects/
+  - title: "Lab Challenges"
+    url: /lab challenges/
+  - title: "Contacts"
+    url: /contacts/
   - title: "About"
     url: /about/
