--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Mary Otieno Website portifolio
 twitter_username: MonsarrateR
 github_username: Maryotieno
-minimal_mistakes_skin: mint
+minimal_mistakes_skin: neon
 search: true
 
 # Build settings
